Standardizes YAML, JSON, and config formatting across repo
Improves consistency by normalizing quotes, indentation, and
key/value styles in all GitHub Actions workflows, project config,
and markdown files. Adds Prettier ignore rules, updates settings,
and syncs formatting to reduce lint noise and tooling friction.

Prepares for cleaner future diffs and better cross-platform collaboration.

--- a/.github/.spellcheck.yml
+++ b/.github/.spellcheck.yml
@@ -16,10 +16,10 @@ matrix:
             - code
             - pre
     sources:
-      - "**/*.md"
+      - '**/*.md'
     default_encoding: utf-8
     exclude:
-      - "libs/**"
-      - "node_modules/**"
-      - "**/libs/**"
-      - "**/node_modules/**"
+      - 'libs/**'
+      - 'node_modules/**'
+      - '**/libs/**'
+      - '**/node_modules/**'
