--- a/.github/workflows/print-release-asset-sizes.yml
+++ b/.github/workflows/print-release-asset-sizes.yml
@@ -3,13 +3,12 @@ name: Print Release Asset Sizes
 on:
   workflow_dispatch:
   schedule:
-    -
-      cron: '32 4 * * *'
+    - cron: '32 4 * * *'
   release:
     types:
       - edited
   workflow_run:
-    workflows: ["Build and Release Electron App"]
+    workflows: ['Build and Release Electron App']
     types:
       - completed
 concurrency:
