--- a/.github/workflows/upload-windows-ia.yml
+++ b/.github/workflows/upload-windows-ia.yml
@@ -3,11 +3,11 @@ name: Upload Windows Distributables to Archive.org
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["Build and Release Electron App"]
+    workflows: ['Build and Release Electron App']
     types:
       - completed
   schedule:
-    - cron: "33 3 1 * *" # Every month at 3:33 AM UTC
+    - cron: '33 3 1 * *' # Every month at 3:33 AM UTC
 
 concurrency:
   group: IAWINDOWS-${{ github.ref }}
@@ -29,7 +29,7 @@ jobs:
         uses: robinraju/release-downloader@daf26c55d821e836577a15f77d86ddc078948b05 # v1.12
         with:
           latest: true
-          fileName: "Fit-File-Viewer-msi-*"
+          fileName: 'Fit-File-Viewer-msi-*'
           out-file-path: release-dist
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -38,7 +38,7 @@ jobs:
         uses: robinraju/release-downloader@daf26c55d821e836577a15f77d86ddc078948b05 # v1.12
         with:
           latest: true
-          fileName: "Fit-File-Viewer-nsis-*"
+          fileName: 'Fit-File-Viewer-nsis-*'
           out-file-path: release-dist
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -47,7 +47,7 @@ jobs:
         uses: robinraju/release-downloader@daf26c55d821e836577a15f77d86ddc078948b05 # v1.12
         with:
           latest: true
-          fileName: "Fit-File-Viewer-portable-*"
+          fileName: 'Fit-File-Viewer-portable-*'
           out-file-path: release-dist
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -56,7 +56,7 @@ jobs:
         uses: robinraju/release-downloader@daf26c55d821e836577a15f77d86ddc078948b05 # v1.12
         with:
           latest: true
-          fileName: "latest.yml"
+          fileName: 'latest.yml'
           out-file-path: release-dist
           token: ${{ secrets.GITHUB_TOKEN }}
 
