--- a/.github/workflows/VirusTotal.yml
+++ b/.github/workflows/VirusTotal.yml
@@ -6,11 +6,11 @@ name: VirusTotal Scan
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["Build and Release Electron App"]
+    workflows: ['Build and Release Electron App']
     types:
       - completed
   schedule:
-    - cron: "33 3 1 * *" # Every month at 3:33 AM UTC
+    - cron: '33 3 1 * *' # Every month at 3:33 AM UTC
 
 permissions:
   contents: read
@@ -32,7 +32,7 @@ jobs:
         uses: robinraju/release-downloader@daf26c55d821e836577a15f77d86ddc078948b05 # v1.12
         with:
           latest: true
-          fileName: "*"
+          fileName: '*'
           out-file-path: release-dist
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: VirusTotal Scan
