--- a/.github/workflows/electronegativity.yml
+++ b/.github/workflows/electronegativity.yml
@@ -5,7 +5,7 @@ name: Electronegativity Scan
 
 on:
   schedule:
-    - cron: "12 4 * * *" # run once a day at 4:12 AM
+    - cron: '12 4 * * *' # run once a day at 4:12 AM
 
 concurrency:
   group: electronegativity-${{ github.ref }}
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: "20"
+          node-version: '20'
       - uses: doyensec/electronegativity-action@0a76b0251ac45f08eaaf49fdc26c75d1951f82b6 # v2.0
         with:
           input: .
